tdf#101827 - mend busy contour dialog.

Previous impl. had an un-necessary timeout to update the screen constantly.

Change-Id: I28ba50166530d516d299b9c873cf59577043bf82
Reviewed-on: https://gerrit.libreoffice.org/29392
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
(cherry picked from commit 1498c4f631e9c90b11dbdb18e8b094b90e143466)
Reviewed-on: https://gerrit.libreoffice.org/29673
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>